--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,8 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
+        <activity android:name=".HiraganaNs">
+        </activity>
         <activity android:name=".HiraganaSs">
         </activity>
         <activity android:name=".HiraganaTs">
